deploy/development/deployment.tpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${KUBE_NAMESPACE}
  namespace: ${KUBE_NAMESPACE}
  labels:
    app: ${KUBE_NAMESPACE}
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  selector:
    matchLabels:
      app: ${KUBE_NAMESPACE}
  template:
    metadata:
      labels:
        app: ${KUBE_NAMESPACE}
    spec:
      terminationGracePeriodSeconds: 35
      serviceAccountName: cd-serviceaccount
      containers:
        - name: node
          image: ${ECR_URL}:${IMAGE_TAG}
          resources:
            limits:
              cpu: 500m
              memory: 250Mi
            requests:
              cpu: 50m
              memory: 100Mi
          ports:
            - containerPort: 3000
              name: http
          securityContext:
            runAsUser: 1001
