deploy/development/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-service
  namespace: ai-website-dev
  labels:
    app: ai-website-dev
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: ai-website-dev
