deploy/development/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-website-dev-ingress
  namespace: ai-website-dev
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: ai-website-dev-ingress-ai-website-dev-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecAuditEngine On
      SecRuleEngine DetectionOnly
      SecDefaultAction "phase:2,pass,log,tag:github_team=central-digital-product-team,tag:namespace=ai-website-dev"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-secret
    nginx.ingress.kubernetes.io/auth-realm: 'Development Access | Authentication Required'
    nginx.ingress.kubernetes.io/server-snippet: |
      location = /health {
        auth_basic off;
        access_log off;
        default_type text/plain;
        add_header Content-Type text/plain;
        return 200 "OK";
      }
      location = /.well-known/security.txt {
        auth_basic off;
        return 301 https://raw.githubusercontent.com/ministryofjustice/security-guidance/main/contact/vulnerability-disclosure-security.txt;
      }
spec:
  ingressClassName: modsec
  tls:
  - hosts:
    - dev-ai-website.apps.live.cloud-platform.service.justice.gov.uk
  rules:
  - host: dev-ai-website.apps.live.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-service
            port:
              number: 3052
